add sonar to CI